--- a/server/views/taskList/taskList.pug
+++ b/server/views/taskList/taskList.pug
@@ -19,12 +19,33 @@ block content
         include prisonerDetails
 
         if user.role === 'CA'
-            include eligibilityTask
-            include proposedAddressTask
+            // todo When should the CA see the full task view?
+            // As soon as they've sent it to RO, so they can see details / current progress?
+            // Or only when it comes back to them?
+            // Or do we need an extra stage so that they strt seeing the full view as soon as the RO starts editing?
+            // todo also - all views should be view only for users that don't own the current stage
+            if licenceStatus.stage === 'UNSTARTED' || licenceStatus.stage === 'ELIGIBILITY'
+                include eligibilityTask
+                include proposedAddressTask
+            else
+                include curfewAddressTask
+                include additionalConditionsTask
+                include riskManagementTask
+                include reportingInstructionsTask
+                include postponementTask
+                include caSubmitTask
+
 
         if user.role === 'RO'
             include curfewAddressTask
             include additionalConditionsTask
             include riskManagementTask
             include reportingInstructionsTask
-            include submitTask
+            include roSubmitTask
+
+        if user.role === 'DM'
+            include curfewAddressTask
+            include additionalConditionsTask
+            include riskManagementTask
+            include reportingInstructionsTask
+            include approvalTask
