Explicit check for eligibility task done

--- a/server/views/taskList/proposedAddressTask.pug
+++ b/server/views/taskList/proposedAddressTask.pug
@@ -1,4 +1,4 @@
-if licenceStatus.decisions.eligible
+if licenceStatus.tasks.exclusion == 'DONE' && licenceStatus.decisions.eligible
     div.largeMarginBottom.borderTop
         h2.heading-medium Proposed address / opt out request
         div.pure-g
