--- a/server/views/caseList/CATable.pug
+++ b/server/views/caseList/CATable.pug
@@ -10,8 +10,8 @@ table#hdcEligiblePrisoners.largeMarginBottom
             th
     tbody
         if hdcEligible && hdcEligible.length > 0
-            each prisoner in hdcEligible
-                tr.hdcEligible
+            each prisoner, index in hdcEligible
+                tr.hdcEligible(class=index % 2 === 1 ? 'greyRow' : undefined)
                     td.name
                         if prisoner.lastName
                             | #{prisoner.lastName}
