--- a/server/views/proposedAddress/includes/preferredAddress.pug
+++ b/server/views/proposedAddress/includes/preferredAddress.pug
@@ -1,9 +1,8 @@
 h3.heading-medium Preferred address
-div#addressDetails.pure-g.largePaddingBottom.content-pull
-
-    div.pure-u-1.pure-u-md-6-24
-        div.l-box
-            span Address
+div#addressDetails.pure-g.largePaddingBottom
+    div.pure-u-1.pure-u-sm-5-12.pure-g
+        div.pure-u-md-2-3
+            | Address
             div.paddingBottom.smallMarginTop
                 if address.addressLine1
                     p#address1.bold.noMargin #{address.addressLine1}
@@ -14,52 +13,45 @@ div#addressDetails.pure-g.largePaddingBottom.content-pull
                 if address.postCode
                     p#addressPostCode.bold.noMargin #{address.postCode}
 
-            div.pure-u-md-2-3.largePaddingBottom
-                | Telephone
-                if address.telephone
-                    p#telephone.bold #{address.telephone}
+        div.pure-u-md-2-3.largePaddingBottom
+            | Telephone
+            if address.telephone
+                p#telephone.bold #{address.telephone}
 
+        div.pure-u-md-2-3.paddingBottom
+            p Does the address have an electricity supply?
+            if address.electricity
+                p#electricity.bold #{address.electricity}
 
-    div.pure-u-1.pure-u-md-10-24
-        div.l-box
-            if address.occupier
-                span Main occupier details
-                div.pure-g.largePaddingBottom.content-pull
-                    div.pure-u-2-5
-                        .l-box
-                            span#occupierName.bold #{address.occupier.name}
-                    div.pure-u-1-5
-                        .l-box
-                            span#occupierAge.bold #{address.occupier.age}
-                    div.pure-u-2-5
-                        .l-box
-                            span#occupierRelation.bold  #{address.occupier.relationship}
+    if address.occupier
+        div.pure-u-1.pure-u-md-7-12
+            div.pure-g
+                p.pure-u-1-2.noMargin Name of main occupier
+                p.pure-u-1-4.noMargin Age
+                p.pure-u-1-4.noMargin Relation to prisoner
+
+            div.pure-g.smallMarginTop.borderBottomLight.smallPaddingBottom
+                p#occupierName.bold.pure-u-1-2.noMargin #{address.occupier.name}
+                p#occupierAge.bold.pure-u-1-4.noMargin #{address.occupier.age}
+                p#occupierRelation.bold.pure-u-1-4.noMargin #{address.occupier.relationship}
 
             if address.residents
-                span Other occupants
-                div.largePaddingBottom
+
+                div.pure-g.largePaddingBottom.smallPaddingTop
+                    p.pure-u-1.bold Other residents
+                    p.pure-u-1-2.noMargin Name
+                    p.pure-u-1-4.noMargin Age
+                    p.pure-u-1-4.noMargin Relation to prisoner
+
                     for resident in address.residents
-                        div.pure-g.content-pull
-                            div.pure-u-2-5
-                                .l-box
-                                    span.bold #{resident.name}
-
-                            div.pure-u-1-5
-                                .l-box
-                                    span.bold #{resident.age}
-
-                            div.pure-u-2-5
-                                .l-box
-                                    span.bold #{resident.relation}
+                        div.pure-u-1
+                            div.pure-g.smallMarginTop
+                                p.bold.noMargin.pure-u-1-2 #{resident.name}
+                                p.bold.noMargin.pure-u-1-4 #{resident.age}
+                                p.bold.noMargin.pure-u-1-4 #{resident.relation}
 
 
-            div
+            div.pure-u-md-2-3
                 p Has the prisoner been convicted or cautioned for an offence against any of the above, or any neighbours to the above address?
                 if address.cautionedAgainstResident
                     p#cautionedAgainstResident.bold #{address.cautionedAgainstResident}
-
-    div.pure-u-1.pure-u-md-8-24
-        .l-box
-            if address.electricity
-                p.noMargin Does the address have an electricity supply?
-                p#electricity.bold #{address.electricity}
