--- a/server/views/reporting/reportingInstructions.pug
+++ b/server/views/reporting/reportingInstructions.pug
@@ -16,7 +16,7 @@ block content
 
         div#address.pure-g
             div.pure-u-1.pure-u-md-2-5
-                div.pure-g.borderBottom.largeMarginBottom.midPaddingBottom
+                div.pure-g.largeMarginBottom.midPaddingBottom
                     div.pure-u-1.pure-u-md-4-5
                         div.form-group
                             label.form-label(for="name") Name of person
@@ -41,23 +41,6 @@ block content
                                 div.form-group
                                     label.form-label(for="telephone") Telephone
                                     input#telephone.form-control.small(name="telephone" type="text" value=data.telephone)
-
-        div#dateTime.pure-g.paddingBottom
-            div.pure-u-1.pure-u-md-2-5
-                div.pure-g
-                    div.pure-u-1.pure-u-md-4-5
-                        div.pure-g
-                            div.pure-u-1.pure-u-md-2-5
-                                div.form-group
-                                    label.form-label(for="date") Date
-                                    input#date.form-control.small(name="date" type="text" value=data.date)
-
-                        div.pure-g
-                            div.pure-u-1.pure-u-md-2-5
-                                div.form-group
-                                    label(for='time') Time
-                                    input(type='time' name='time' id='time' class='form-control' value=data.time)
-
 
         include ../includes/formButtons
 
