--- a/server/views/risk/riskManagement.pug
+++ b/server/views/risk/riskManagement.pug
@@ -50,7 +50,7 @@ block content
             div.largePaddingBottom
                 h3.heading-medium Victim liaison
                 div.form-group.inline.smallPaddingTop
-                    p Is the Victim Contact Service qualifying case where the victim has opted in?
+                    p Is this a Victim Contact Service qualifying case where the victim has opted in?
 
                     div.multiple-choice(data-target="victimForm")
                         input#victimYes(type="radio" checked=data.victimLiaison === 'Yes' name="victimLiaison" value="Yes")
