--- a/server/views/licenceConditions/conditionsSummary.pug
+++ b/server/views/licenceConditions/conditionsSummary.pug
@@ -2,6 +2,9 @@ extends ../layout
 
 block content
 
+    div.back-link-container.smallPaddingTop
+        a.link-back(href="javascript: window.history.back();") Back
+
     div.largePaddingBottom
         if licence.licenceConditions && licence.licenceConditions.length > 0
             include ../licenceDetails/additionalConditions
