--- a/server/views/taskList/reportingInstructionsTask.pug
+++ b/server/views/taskList/reportingInstructionsTask.pug
@@ -10,8 +10,9 @@ div.largeMarginBottom.borderTop
             else
                 | Not yet added
         div.pure-u-1-4
-            a.taskListAction.center.button(href="/hdc/reporting/reportingInstructions/" + prisonerInfo.offenderNo)
-                if licenceStatus.tasks.reportingInstructions === 'UNSTARTED'
+            if licenceStatus.tasks.reportingInstructions === 'UNSTARTED'
+                a.taskListAction.center.button(href="/hdc/reporting/reportingInstructions/" + prisonerInfo.offenderNo)
                     | Start
-                else
+            else
+                a.taskListAction.center.button.button-secondary(href="/hdc/reporting/reportingInstructions/" + prisonerInfo.offenderNo)
                     | View
