--- a/server/views/taskList/additionalConditionsTask.pug
+++ b/server/views/taskList/additionalConditionsTask.pug
@@ -17,8 +17,9 @@ div.largeMarginBottom.borderTop
                 | No conditions added
         div.pure-u-1-4
 
-            a.taskListAction.center.button(href="/hdc/licenceConditions/standard/" + prisonerInfo.offenderNo)
-                if licenceStatus.tasks.licenceConditions === 'UNSTARTED'
+            if licenceStatus.tasks.licenceConditions === 'UNSTARTED'
+                a.taskListAction.center.button(href="/hdc/licenceConditions/standard/" + prisonerInfo.offenderNo)
                     | Start
-                else
+            else
+                a.taskListAction.center.button.button-secondary(href="/hdc/licenceConditions/standard/" + prisonerInfo.offenderNo)
                     | View
