--- a/server/views/taskList/curfewAddressTask.pug
+++ b/server/views/taskList/curfewAddressTask.pug
@@ -22,9 +22,4 @@ div.largeMarginBottom.borderTop
                 else
                     | Not yet approved
             div.pure-u-1-4
-                if licenceStatus.tasks.curfewAddressReview === 'UNSTARTED'
-                    a.taskListAction.center.button(href="/hdc/curfew/curfewAddressReview/" + prisonerInfo.offenderNo)
-                        | Start
-                else
-                    a.taskListAction.center.button.button-secondary(href="/hdc/curfew/curfewAddressReview/" + prisonerInfo.offenderNo)
-                        | View
+                +proceed(licenceStatus.tasks.curfewAddressReview, 'UNSTARTED', 'Start', 'View', "/hdc/curfew/curfewAddressReview/" + prisonerInfo.offenderNo)
