--- a/server/views/taskList/reportingInstructionsTask.pug
+++ b/server/views/taskList/reportingInstructionsTask.pug
@@ -10,9 +10,4 @@ div.largeMarginBottom.borderTop
             else
                 | Not yet added
         div.pure-u-1-4
-            if licenceStatus.tasks.reportingInstructions === 'UNSTARTED'
-                a.taskListAction.center.button(href="/hdc/reporting/reportingInstructions/" + prisonerInfo.offenderNo)
-                    | Start
-            else
-                a.taskListAction.center.button.button-secondary(href="/hdc/reporting/reportingInstructions/" + prisonerInfo.offenderNo)
-                    | View
+            +proceed(licenceStatus.tasks.reportingInstructions, 'UNSTARTED', 'Start', 'View', "/hdc/reporting/reportingInstructions/" + prisonerInfo.offenderNo)
