--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -178,6 +178,7 @@ a.button.button-secondary {
 }
 
 .conditionSelector {
+    min-height: 70px;
     border: solid $grey-1 2px;
     margin-bottom: 10px;
     padding: 15px;
