--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -178,28 +178,27 @@ a.button.button-secondary {
 }
 
 .conditionSelector {
-    min-height: 70px;
     border: solid $grey-1 2px;
-    margin-bottom: 10px;
-    padding: 15px;
-
-    div {
-        position: relative;
-    }
-
+    display: flex;
     label {
-        padding: 5px 0 0 50px;
-        margin-right: 20px;
+        display: flex;
+        padding: 10px 40px 10px 0;
+    }
+    div {
+        padding: 10px 0;
     }
 
     [type=checkbox]+label::before {
-        top: 15px;
-        left: 15px;
+        min-width: 34px;
+        margin: 0 20px;
+        position: relative;
+        align-self: center;
     }
-
-    input:checked + label::after {
-        top: 25px;
-        left: 23px;
+    [type=checkbox]+label::after {
+        position: relative;
+        align-self: center;
+        margin-top: -27px;
+        margin-left: -58px;
     }
 }
 
