--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -60,14 +60,13 @@ html(lang="en")
             block content
 
         footer(class="group js-footer", id="footer", role="contentinfo")
-            div(class="footer-wrapper")
+            div(class="hdc-footer-wrapper")
                 div(class="footer-meta")
                     div(class="footer-meta-inner")
                         div(class="open-government-licence")
                             p(class="logo")
                                 a(href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/", rel="license") Open Government Licence
-                            p All content is available under the
-                                <a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"  rel="license">Open Government Licence v3.0</a>, except where otherwise stated
+                            p All content is available under the <a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"  rel="license">Open Government Licence v3.0</a>, except where otherwise stated
 
 
                     div(class="copyright")
