reduced padding on curfew hours

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -68,6 +68,10 @@ a.button.button-secondary {
     padding-bottom: 10px;
 }
 
+.tinyPaddingBottom {
+    padding-bottom: 5px;
+}
+
 .smallPaddingTop {
     padding-top: 10px;
 }
