--- a/server/views/curfew/curfewHours.pug
+++ b/server/views/curfew/curfewHours.pug
@@ -31,7 +31,7 @@ block content
                         div.pure-u-1-3.pure-u-md-4-24
                             span.bold.capitalize #{day}
                         div.pure-u-1-3.pure-u-md-10-24
-                            div.form-group
+                            div.tinyPaddingBottom
                                 label(for=day+"From", class="form-label")
                                     div.pure-g.content-pull
                                         div.pure-u-1-3
@@ -42,7 +42,7 @@ block content
                                                 span.hours-text hours each evening
 
                         div.pure-u-1-3.pure-u-md-10-24
-                            div.form-group
+                            div.tinyPaddingBottom
                                 label(for=day+"Until", class="form-label")
                                     div.pure-g.content-pull
                                         div.pure-u-1-3
