Change Prisoner to Offender

--- a/server/views/caseList/index.pug
+++ b/server/views/caseList/index.pug
@@ -1,7 +1,7 @@
 extends ../layout
 
 block content
-    h1#pageHeading.heading-large HDC eligible prisoners
+    h1#pageHeading.heading-large HDC eligible offenders
 
     if user.role === 'CA'
         include CATable
