--- a/server/views/eligibility/includes/excluded.pug
+++ b/server/views/eligibility/includes/excluded.pug
@@ -2,7 +2,7 @@ block excludedForm
 
     - var vals = data.reason || ''
 
-    p Select one or more reasons why the prisoner is excluded:
+    p Select one or more reasons why the offender is excluded:
 
     div.pure-g
         div.pure-u-10-24
