--- a/server/views/eligibility/includes/suitability.pug
+++ b/server/views/eligibility/includes/suitability.pug
@@ -2,7 +2,7 @@ block unsuitableForm
 
     - var vals = data.reason || ''
 
-    p Select one or more reasons why the prisoner is presumed unsuitable:
+    p Select one or more reasons why the offender is presumed unsuitable:
     div.pure-g
         div.pure-u-10-24
             div.multiple-choice
