--- a/server/views/proposedAddress/bassReferral.pug
+++ b/server/views/proposedAddress/bassReferral.pug
@@ -14,7 +14,7 @@ block content
         div.smallPaddingTop.paddingBottom.largeMarginBottom
             div.largePaddingBottom
                 div.form-group.inline.smallPaddingTop
-                    p Has the prisoner requested a BASS referral?
+                    p Has the offender requested a BASS referral?
 
                     div.multiple-choice(data-target="bassFollowUps")
                         input#yes(type="radio" checked=data && data.decision === 'Yes' name="decision" value="Yes")
