--- a/server/views/proposedAddress/curfewAddress.pug
+++ b/server/views/proposedAddress/curfewAddress.pug
@@ -8,7 +8,7 @@ block content
 
         h2.heading-large Proposed curfew address
 
-        p.pure-u-1-2 Enter the proposed address that the prisoner has completed on the returned HDC form
+        p.pure-u-1-2 Enter the proposed address that the offender has completed on the returned HDC form
 
     h3.heading-medium Preferred address
 
@@ -75,7 +75,7 @@ block content
                 div.pure-g
                     div.pure-u-4-5
                         div.form-group.inline.smallPaddingTop
-                            p Has the prisoner been convicted or cautioned for an offence against any of the above, or any neighbours to the above address?
+                            p Has the offender been convicted or cautioned for an offence against any of the above, or any neighbours to the above address?
 
                             div.multiple-choice
                                 input#cautionedYes(type="radio" checked=data && data.cautionedAgainstResident === 'Yes' name="cautionedAgainstResident" value="Yes")
