--- a/server/views/proposedAddress/includes/otherResidents.pug
+++ b/server/views/proposedAddress/includes/otherResidents.pug
@@ -7,7 +7,7 @@ div.largePaddingBottom
     div.pure-g
         div.pure-u-sm-5-12 Name
         div.pure-u-sm-1-6.padLeftRight15 Age
-        div.pure-u-sm-5-12 Relation to prisoner
+        div.pure-u-sm-5-12 Relation to offender
 
     while n < residentsToShow
         div.pure-g.smallPaddingBottom.otherResident
