--- a/server/views/licenceDetails/curfewAddress.pug
+++ b/server/views/licenceDetails/curfewAddress.pug
@@ -56,7 +56,7 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
     div.pure-u-1-2
         div.pure-g
             div.pure-u-3-4
-                span Has the prisoner been convicted or cautioned for an offence against any of the above, or any neighbours to the above address?
+                span Has the offender been convicted or cautioned for an offence against any of the above, or any neighbours to the above address?
     div.pure-u-1-2
         div#dischargeContactNumber
             if address.cautionedAgainstResident
