--- a/server/views/proposedAddress/optOut.pug
+++ b/server/views/proposedAddress/optOut.pug
@@ -14,7 +14,7 @@ block content
         div.smallPaddingTop.paddingBottom.largeMarginBottom
             div.largePaddingBottom
                 div.form-group.inline.smallPaddingTop
-                    p Has the prisoner decided to opt out of the HDC process?
+                    p Has the offender decided to opt out of the HDC process?
 
                     div.multiple-choice(data-target="optOutForm")
                         input#optOutYes(type="radio" checked=data && data.decision === 'Yes' name="decision" value="Yes")
