--- a/server/views/taskList/prisonerDetails.pug
+++ b/server/views/taskList/prisonerDetails.pug
@@ -1,7 +1,4 @@
-if role === 'CA'
-    h2.heading-medium Personal details
-else
-    h2.heading-medium Prisoner details
+h2.heading-medium Offender details
 
 div#personalDetails.pure-g.borderBottom.paddingBottom
     div.pure-u-1.pure-u-md-6-24
