--- a/server/views/eligibility/includes/suitability.pug
+++ b/server/views/eligibility/includes/suitability.pug
@@ -13,6 +13,9 @@ block unsuitableForm
                 label(for='deportationLiable') Foreign national liable to deportation but not yet served with
                     |  a decision to deport
             div.multiple-choice
+                input(type='checkbox' name='reason' id='immigrationStatusUnclear' value='immigrationStatusUnclear' checked=vals.indexOf('immigrationStatusUnclear') !== -1)
+                label(for='immigrationStatusUnclear') Immigration status unclear
+            div.multiple-choice
                 input(type='checkbox' name='reason' id='recalled' value='recalled' checked=vals.indexOf('recalled') !== -1)
                 label(for='recalled') Recalled for poor behaviour during a previous period of HDC
         div.pure-u-4-24
