Reorg fields, additional dates, add cell location, padding

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -156,6 +156,10 @@ a.button.button-secondary {
     padding-right: 15px;
 }
 
+.padRight30 {
+    padding-right: 30px;
+}
+
 .padRight7 {
     padding-right: 7px;
 }
