--- a/server/views/proposedAddress/includes/addressDetail.pug
+++ b/server/views/proposedAddress/includes/addressDetail.pug
@@ -1,28 +1,28 @@
-mixin addressDetail(address)
+mixin addressDetail(type, address)
 
-    div#addressDetails.pure-g.largePaddingBottom
+    div.pure-g.largePaddingBottom(id=type+"-addressDetails")
         div.pure-u-1.pure-u-sm-5-12.pure-g
             div.pure-u-md-2-3
                 | Address
                 div.paddingBottom.smallMarginTop
                     if address.addressLine1
-                        p#address1.bold.noMargin #{address.addressLine1}
+                        p.bold.noMargin(id=type+"-address1") #{address.addressLine1}
                     if address.addressLine2
-                        p#address2.bold.noMargin #{address.addressLine2}
+                        p.bold.noMargin(id=type+"-address2") #{address.addressLine2}
                     if address.addressTown
-                        p#addressTown.bold.noMargin #{address.addressTown}
+                        p.bold.noMargin(id=type+"-addressTown") #{address.addressTown}
                     if address.postCode
-                        p#addressPostCode.bold.noMargin #{address.postCode}
+                        p.bold.noMargin(id=type+"-addressPostCode") #{address.postCode}
 
             div.pure-u-md-2-3.largePaddingBottom
                 | Telephone
                 if address.telephone
-                    p#telephone.bold #{address.telephone}
+                    p.bold(id=type+"-telephone") #{address.telephone}
 
             div.pure-u-md-2-3.paddingBottom
                 p Does the address have an electricity supply?
                 if address.electricity
-                    p#electricity.bold #{address.electricity}
+                    p.bold(id=type+"-electricity") #{address.electricity}
 
         if address.occupier
             div.pure-u-1.pure-u-md-7-12
@@ -32,9 +32,9 @@ mixin addressDetail(address)
                     p.pure-u-1-4.noMargin Relation to prisoner
 
                 div.pure-g.smallMarginTop.borderBottomLight.smallPaddingBottom
-                    p#occupierName.bold.pure-u-1-2.noMargin #{address.occupier.name}
-                    p#occupierAge.bold.pure-u-1-4.noMargin #{address.occupier.age}
-                    p#occupierRelation.bold.pure-u-1-4.noMargin #{address.occupier.relationship}
+                    p.bold.pure-u-1-2.noMargin(id=type+"-occupierName") #{address.occupier.name}
+                    p.bold.pure-u-1-4.noMargin(id=type+"-occupierAge") #{address.occupier.age}
+                    p.bold.pure-u-1-4.noMargin(id=type+"-occupierRelation") #{address.occupier.relationship}
 
                 if address.residents
 
@@ -55,4 +55,4 @@ mixin addressDetail(address)
                 div.pure-u-md-2-3
                     p Has the prisoner been convicted or cautioned for an offence against any of the above, or any neighbours to the above address?
                     if address.cautionedAgainstResident
-                        p#cautionedAgainstResident.bold #{address.cautionedAgainstResident}
+                        p.bold(id=type+"-cautionedAgainstResident") #{address.cautionedAgainstResident}
