Added client side JS to allow extra residents to be added

--- a/server/views/proposedAddress/curfewAddress.pug
+++ b/server/views/proposedAddress/curfewAddress.pug
@@ -34,3 +34,6 @@ block content
 
         include ../includes/formButtons
 
+block append scripts
+    script(src="/public/javascripts/otherResidentsClient.js?"+version)
+
