--- a/server/views/proposedAddress/includes/addressForm.pug
+++ b/server/views/proposedAddress/includes/addressForm.pug
@@ -55,7 +55,7 @@ mixin addressForm(type)
             div.pure-g
                 div.pure-u-4-5
                     div.form-group.inline.smallPaddingTop
-                        p Has the offender been convicted or cautioned for an offence against any of the above, or any neighbours to the above address?
+                        p According to the offender, have they been convicted or cautioned for an offence against any of the above, or any neighbours to the above address?
 
                         div.multiple-choice
                             input(id=type+"-cautionedYes" type="radio" checked=thisAddress.cautionedAgainstResident === 'Yes' name=type+"[cautionedAgainstResident]" value="Yes")
