Removed electricity question from address form.

--- a/server/views/proposedAddress/includes/otherResidents.pug
+++ b/server/views/proposedAddress/includes/otherResidents.pug
@@ -5,7 +5,7 @@ mixin otherResidents(type, savedAddress)
     div.otherResidentsInput.largePaddingBottom
         div.pure-g
             div.pure-u-1
-                h4.heading-small Other residents+other
+                h4.heading-small Other residents
                 p.font-xsmall Only enter an age if the person is under 18
         div.pure-g
             div.pure-u-sm-5-12 Name
