--- a/server/views/licenceConditions/additionalConditions.pug
+++ b/server/views/licenceConditions/additionalConditions.pug
@@ -21,7 +21,7 @@ block content
         div#conditionsInstructions
             div.pure-g.borderBottom
                 div.pure-u-1
-                    p Select the additional conditions you want to add to the prisoner's licence below.
+                    p Select the additional conditions you want to add to the offender's licence below.
 
             div.pure-g
                 div.pure-u-1.midPaddingTopBottom
